Homepage layout ver.1, bugfixing, styling and gitignore
Fixed orm structure to match database scheme
Fixed wrong field names in where statements
Fixed some layout issues
Added .gitignore
Added basic homepage layout and styling
Added basic navigation

--- a/src/static/css/signin.css
+++ b/src/static/css/signin.css
@@ -1,9 +1,3 @@
-body {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #eee;
-}
-
 .form-signin {
   max-width: 330px;
   padding: 15px;
@@ -21,9 +15,6 @@ body {
   font-size: 16px;
   height: auto;
   padding: 10px;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
 }
 .form-signin .form-control:focus {
   z-index: 2;
